fix spacing

--- a/static/atsGo.css
+++ b/static/atsGo.css
@@ -410,7 +410,7 @@ iframe#mainVid {
     height: 187px;
     position: relative;
     top: 15vh;
-    left: 12%;
+    left: 1%;
   }
 
   .sec {
